Update pod update swag
